fixed a layout bug on odd desktop sizes and swapped ordering of MSTY project

--- a/assets/css/endeavor.styl
+++ b/assets/css/endeavor.styl
@@ -239,7 +239,7 @@ img.lazyload
 	position relative
 	margin-left auto
 	margin-right auto
-	margin-top 85vh
+	margin-top 768px  // margin-top 85vh before
 	
 	transition margin-top 250ms ease-in-out
 	
